# ROS2to1-bridge

./: .gitignore  README.md
ros1_msgs_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros1_msgs_ws/src/noetic_subscriber/: CMakeLists.txt  package.xml
ros1_msgs_ws/src/noetic_subscriber/src/: subscriber.cpp
ros2_msgs_ws/src/foxy_publisher/: CMakeLists.txt  my_bridge_mapping.yaml  package.xml
ros2_msgs_ws/src/foxy_publisher/src/: publisher.cpp
